fix gulp: del->letter-spacing: $thim_main_menu_letter_spacing;

--- a/assets/sass/header/_header-options.scss
+++ b/assets/sass/header/_header-options.scss
@@ -22,7 +22,7 @@ header#masthead {
 					font-style: $thim_main_menu_font_style;
 					font-size: $thim_main_menu_font_size;
 					line-height: $thim_main_menu_line_height;
-					letter-spacing: $thim_main_menu_letter_spacing;
+					//letter-spacing: $thim_main_menu_letter_spacing;
 					color: $thim_main_menu_color;
 					&:hover {
 						color: $thim_main_menu_hover_color;
